--- a/_config.yml
+++ b/_config.yml
@@ -2,14 +2,14 @@
 
 title: Site Title
 locale: en_US
-logo: # Marianne
+logo: # 
 
 # Enter the following platform usernames if you would like for them to appear on your site.
 owner:
-  name: Your Name
-  avatar: bio-photo.jpg
-  bio: "A brief description of yourself."
-  email: #emailaddress
+  name: Marianne Kupin-Lisbin
+  avatar: Marianne.jpg
+  bio: Historian. Teacher. Researcher.
+  email: mariannekupinlisbin@gmail.com
   # Do not include the @ symbol in your Twitter username
   twitter: #username
   linkedin: #username
